--- a/ErabliereIU/src/rapport/degreejour/rapport-degre-jour.component.html
+++ b/ErabliereIU/src/rapport/degreejour/rapport-degre-jour.component.html
@@ -1,1 +1,84 @@
-<h3>Degré jour</h3>
+<h4>Degré jour</h4>
+
+<form #rapportDegresJourForm="ngForm">
+    <span class="text-danger">
+        {{generalError}}
+    </span>
+    <div class="form-group">
+        <label for="dateDebut">Date de début</label>
+        <einput
+            type="date"
+            class="form-control"
+            id="dateDebut"
+            formControlName="dateDebut" />
+        <input-error 
+            errorObj="errorObj"
+            controlName="dateDebut"></input-error>
+    </div>
+    <div class="form-group">
+        <label for="dateFin">Date de fin</label>
+        <einput
+            type="date"
+            class="form-control"
+            id="dateFin"
+            formControlName="dateFin" />
+        <input-error
+            errorObj="errorObj"
+            controlName="dateFin"></input-error>
+    </div>
+    <div class="form-group">
+        <label for="idCapteur">Capteur</label>
+        <select class="form-control" id="idCapteur" formControlName="idCapteur">
+            <option *ngFor="let capteur of capteurs" [value]="capteur.id">{{capteur.nom}}</option>
+        </select>
+        <input-error
+            errorObj="errorObj"
+            controlName="idCapteur"></input-error>
+    </div>
+    <div class="form-group">
+        <label for="utiliserTrioDonnees">Utiliser temperature depuis trio de données</label>
+        <einput
+            type="checkbox"
+            class="form-control"
+            id="utiliserTrioDonnees"
+            formControlName="utiliserTrioDonnees" />
+        <input-error
+            errorObj="errorObj"
+            controlName="utiliserTrioDonnees"></input-error>
+    </div>
+    <div class="form-group">
+        <label for="temperatureBase">Température de base</label>
+        <einput
+            type="number"
+            class="form-control"
+            id="temperatureBase"
+            formControlName="temperatureBase" />
+        <input-error
+            errorObj="errorObj"
+            controlName="temperatureBase"></input-error>
+    </div>
+    <span 
+        class="btn btn-primary" 
+        (click)="onSubmit()"
+        (keypress)="onKeyPress($event)">Générer</span>
+</form>
+
+@if (degresJours) {
+    <div>
+        <table class="table table-striped table-responsive">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Temperature moyenne</th>
+                    <th>Degré jour</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let degreJour of degresJours?.rapports">
+                    <td>{{degreJour.date}}</td>
+                    <td>{{degreJour.degresJours}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+}
