--- a/ErabliereIU/src/capteurs/capteur-list.component.html
+++ b/ErabliereIU/src/capteurs/capteur-list.component.html
@@ -9,7 +9,7 @@
 }
 
 <form class="table-responsive" novalidate>
-    <table class="table table-striped">
+    <table class="table table-striped mb-5">
         <thead>
             <tr>
                 <th scope="col">Id</th>
