--- a/ErabliereIU/src/capteurs/gestion-capteurs.component.html
+++ b/ErabliereIU/src/capteurs/gestion-capteurs.component.html
@@ -20,10 +20,9 @@
             [idErabliere]="idErabliereSelectionee"
             [capteurs]="capteurs"
             (shouldRefreshCapteurs)="getCapteurs()"
-            class="mb-3"
 />
 
-<div class="mt-3">
+<div>
 @if(afficherSectionAjouterCapteurImage) {
     <ajouter-capteur-image
         (masquer)="afficherSectionAjouterCapteurImage = false"
